--- a/MyFirstApp/Views/Home/Index.cshtml
+++ b/MyFirstApp/Views/Home/Index.cshtml
@@ -5,7 +5,11 @@
 <div class="jumbotron">
     <h1>Hello World!!!</h1>
     <p class="lead">It's my FIRST Web applications </p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Button :3 &raquo;</a></p>
+    <a class="nav navbar-nav">  @Html.ActionLink("2 Секретная кнопка", "SecretButton", "Home")</a>
+</div>
+
+<div class="navbar-collapse collapse">
+    <a class="nav navbar-nav">  @Html.ActionLink("3 Секретная кнопка", "SecretButton", "Home")</a>
 </div>
 
 <div class="row">
@@ -23,9 +27,10 @@
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
+   
     <div class="col-md-4">
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p> <a class=" btn-default">@Html.ActionLink("4 Секретная кнопка", "SecretButton", "Home")</a> </p>
     </div>
-</div>
+    </div>
