--- a/MyFirstApp/Views/Home/Index.cshtml
+++ b/MyFirstApp/Views/Home/Index.cshtml
@@ -6,6 +6,8 @@
     <h1>Hello World!!!</h1>
     <p class="lead">It's my FIRST Web applications </p>
     <a class="nav navbar-nav">  @Html.ActionLink("2 Секретная кнопка", "SecretButton", "Home")</a>
+    <h2>Variable: @ViewBag.Variable</h2>
+
 </div>
 
 <div class="navbar-collapse collapse">
