--- a/MyFirstApp/Views/Home/SecretButton.cshtml
+++ b/MyFirstApp/Views/Home/SecretButton.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<MyFirstApp.Models.Fruits>
+
 @{
     Layout = null;
 }
@@ -7,13 +8,14 @@
 
 <html>
 <head>
-    
+
     <meta name="viewport" content="width=device-width" />
     <title>SecretButton</title>
 </head>
 <body>
     <div>
         <p> Это секретная страница</p>
+       
 
     </div>
 </body>
